--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,17 +1,39 @@
 {% load static %}
 <div class="navbar">
-    <a href="{% url 'home' %}" class="navbar-brand"><i class="fas fa-cube"></i> Xandecor</a>
-    <div class="navbar-menu">
-        <span class="navbar-text"><i class="fas fa-boxes"></i> Containers List</span>
-        <a href="{% url 'sales_doctor' %}" class="navbar-button {% if active_page == 'sales_doctor' %}active{% endif %}"><i class="fas fa-user-md"></i> Sales doctor</a>
-        <a href="{% url 'requested_order' %}" class="navbar-button {% if active_page == 'requested_order' %}active{% endif %}"><i class="fas fa-users"></i> Requested Orders</a>
-        <a href="{% url 'containers_list' %}" class="navbar-button {% if active_page == 'containers_list' %}active{% endif %}"><i class="fas fa-box-open"></i> Containers</a>
-        <a href="{% url 'reviewers' %}" class="navbar-button {% if active_page == 'reviewers' %}active{% endif %}"><i class="fas fa-users"></i> Users</a>
-        <a href="{% url 'products_reviews' %}" class="navbar-button {% if active_page == 'products_reviews' %}active{% endif %}"><i class="fas fa-star"></i> Product Reviews</a>
-        <a href="{% url 'asked_users' %}" class="navbar-button {% if active_page == 'asked_users' %}active{% endif %}"><i class="fas fa-users"></i> Requests
-            {% if asked_users_count > 0 %}
-                <span class="badge">{{ asked_users_count }}</span>
-            {% endif %}
-        </a>
-    </div>
+  <a href="{% url 'home' %}" class="navbar-brand"><i class="fas fa-cube"></i> Xandecor</a>
+  <div class="navbar-menu">
+    <span class="navbar-text"><i class="fas fa-boxes"></i> Containers List</span>
+    <a
+      href="{% url 'sales_doctor' %}"
+      class="navbar-button {% if active_page == 'sales_doctor' %}active{% endif %}"
+      ><i class="fas fa-user-md"></i> Sales doctor</a
+    >
+    <a
+      href="{% url 'requested_order' %}"
+      class="navbar-button {% if active_page == 'requested_orders' %}active{% endif %}"
+      ><i class="fas fa-users"></i> Requested Orders</a
+    >
+    <a
+      href="{% url 'containers_list' %}"
+      class="navbar-button {% if active_page == 'containers_list' %}active{% endif %}"
+      ><i class="fas fa-box-open"></i> Containers</a
+    >
+    <a
+      href="{% url 'reviewers' %}"
+      class="navbar-button {% if active_page == 'reviewers' %}active{% endif %}"
+      ><i class="fas fa-users"></i> Users</a
+    >
+    <a
+      href="{% url 'products_reviews' %}"
+      class="navbar-button {% if active_page == 'products_reviews' %}active{% endif %}"
+      ><i class="fas fa-star"></i> Product Reviews</a
+    >
+    <a
+      href="{% url 'asked_users' %}"
+      class="navbar-button {% if active_page == 'asked_users' %}active{% endif %}"
+      ><i class="fas fa-users"></i> Requests {% if asked_users_count > 0 %}
+      <span class="badge">{{ asked_users_count }}</span>
+      {% endif %}
+    </a>
+  </div>
 </div>
